// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compressor batchSize argument should compress all normal events into batches of 2 events 1`] = `
Array [
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "pin-2.0.refinementbar-dropdown",
          "reason": "SIMPLE_EVAL",
          "value": false,
        },
        Object {
          "key": "jsd.queues.keyboard-shortcuts",
          "reason": "ERROR",
          "ruleId": "111-bbbbb-ccc",
          "value": true,
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
          "reason": "RULE_MATCH",
          "ruleId": "111-bcbcbcb-dddd",
          "value": false,
        },
        Object {
          "key": "nav-ux-enable-async-edit-filter-modal",
          "value": true,
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "project.config.pce.project-archival",
          "value": true,
        },
        Object {
          "key": "jsw.frontend.growth.experiments.persistent.upgrade",
          "reason": "FALLTHROUGH",
          "value": "not-enrolled",
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
]
`;

exports[`compressor batchSize argument should compress to correct number of batches when events list length is not a multiple of batchSize 1`] = `
Array [
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "pin-2.0.refinementbar-dropdown",
          "reason": "SIMPLE_EVAL",
          "value": false,
        },
        Object {
          "key": "jsd.queues.keyboard-shortcuts",
          "reason": "ERROR",
          "ruleId": "111-bbbbb-ccc",
          "value": true,
        },
        Object {
          "key": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
          "reason": "RULE_MATCH",
          "ruleId": "111-bcbcbcb-dddd",
          "value": false,
        },
        Object {
          "key": "nav-ux-enable-async-edit-filter-modal",
          "value": true,
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "project.config.pce.project-archival",
          "value": true,
        },
        Object {
          "key": "jsw.frontend.growth.experiments.persistent.upgrade",
          "reason": "FALLTHROUGH",
          "value": "not-enrolled",
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
]
`;

exports[`compressor batchSize argument should compress to one batch if batchSize is larger than events list length 1`] = `
Array [
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "pin-2.0.refinementbar-dropdown",
          "reason": "SIMPLE_EVAL",
          "value": false,
        },
        Object {
          "key": "jsd.queues.keyboard-shortcuts",
          "reason": "ERROR",
          "ruleId": "111-bbbbb-ccc",
          "value": true,
        },
        Object {
          "key": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
          "reason": "RULE_MATCH",
          "ruleId": "111-bcbcbcb-dddd",
          "value": false,
        },
        Object {
          "key": "nav-ux-enable-async-edit-filter-modal",
          "value": true,
        },
        Object {
          "key": "project.config.pce.project-archival",
          "value": true,
        },
        Object {
          "key": "jsw.frontend.growth.experiments.persistent.upgrade",
          "reason": "FALLTHROUGH",
          "value": "not-enrolled",
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
]
`;

exports[`compressor events argument should compress all normal events 1`] = `
Array [
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "pin-2.0.refinementbar-dropdown",
          "reason": "SIMPLE_EVAL",
          "value": false,
        },
        Object {
          "key": "jsd.queues.keyboard-shortcuts",
          "reason": "ERROR",
          "ruleId": "111-bbbbb-ccc",
          "value": true,
        },
        Object {
          "key": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
          "reason": "RULE_MATCH",
          "ruleId": "111-bcbcbcb-dddd",
          "value": false,
        },
        Object {
          "key": "nav-ux-enable-async-edit-filter-modal",
          "value": true,
        },
        Object {
          "key": "project.config.pce.project-archival",
          "value": true,
        },
        Object {
          "key": "jsw.frontend.growth.experiments.persistent.upgrade",
          "reason": "FALLTHROUGH",
          "value": "not-enrolled",
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
]
`;

exports[`compressor events argument should default to uncompressed events for invalid events and skip those with no attributes 1`] = `
Array [
  Object {
    "action": "exposed",
    "actionSubject": "features",
    "attributes": Object {
      "evaluations": Array [
        Object {
          "key": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
          "reason": "RULE_MATCH",
          "ruleId": "111-bcbcbcb-dddd",
          "value": false,
        },
      ],
    },
    "eventType": "operational",
    "source": "@atlassian/exposure-events-compressor",
    "tags": Array [
      "measurement",
      "autoExposure",
    ],
  },
  Object {
    "action": "exposed",
    "actionSubject": "feature",
    "env": "dev",
    "eventType": "operational",
    "origin": "web",
    "platform": "web",
    "product": "jira",
    "sessionId": "1605514166708",
    "source": "@atlaskit/feature-flag-client",
    "subproduct": "platform",
    "tabId": "066ed234-52b1-43ad-8fd3-b2eddb8e2824",
    "tags": Array [],
    "taskSessions": Object {},
    "tenantId": "e433828a-6e8c-419f-bfb4-dac258ea2886",
    "tenantIdType": "cloudId",
    "userIdType": "atlassianAccount",
    "version": "1.0.0",
  },
  Object {
    "action": "exposed",
    "actionSubject": "feature",
    "env": "dev",
    "eventType": "operational",
    "origin": "web",
    "platform": "web",
    "product": "jira",
    "sessionId": "1605514166708",
    "source": "@atlaskit/feature-flag-client",
    "subproduct": "platform",
    "tabId": "066ed234-52b1-43ad-8fd3-b2eddb8e2824",
    "tags": Array [
      "autoExposure",
      "measurement",
    ],
    "taskSessions": Object {},
    "tenantId": "e433828a-6e8c-419f-bfb4-dac258ea2886",
    "tenantIdType": "cloudId",
    "userIdType": "atlassianAccount",
    "version": "1.0.0",
  },
  Object {
    "action": "exposed",
    "actionSubject": "feature",
    "attributes": Object {
      "flagKey": "empanada.nin-export-issues-dashboard-gadgets_yb8zi",
      "reason": "RULE_MATCH",
      "ruleId": "111-bcbcbcb-dddd",
      "value": false,
    },
    "env": "dev",
    "eventType": "track",
    "origin": "web",
    "platform": "web",
    "product": "jira",
    "sessionId": "1605514166708",
    "source": "@atlaskit/feature-flag-client",
    "subproduct": "platform",
    "tabId": "066ed234-52b1-43ad-8fd3-b2eddb8e2824",
    "tags": Array [
      "autoExposure",
      "measurement",
    ],
    "taskSessions": Object {},
    "tenantId": "e433828a-6e8c-419f-bfb4-dac258ea2886",
    "tenantIdType": "cloudId",
    "userIdType": "atlassianAccount",
    "version": "1.0.0",
  },
]
`;

exports[`compressor events argument should return empty list if events list is empty 1`] = `Array []`;
